NXP-33000: Rework CoreFeature to deploy necessary components only